--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ beautifulsoup4 = "^4.9.3"
 pandas = "^1.1.5"
 requests = "^2.25.1"
 tabulate = "^0.8.7"
+matplotlib = "^3.3.3"
 
 [tool.poetry.dev-dependencies]
 
