--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.1.5"
 requests = "^2.25.1"
 tabulate = "^0.8.7"
 matplotlib = "^3.3.3"
+aiohttp = "^3.7.3"
 
 [tool.poetry.dev-dependencies]
 
